assets/css/rtl.css
/* ... */
@media only screen and (max-width: 479px) 
{    
    #audit-trail-wrapper .main .checksum .code 
    {        
        word-break: break-all;        
        line-height: 1;        
        margin: 10px 0;    
    }    
    #audit-trail-wrapper .main .info .sign 
    {        
        min-width: inherit;    
    }    
    table.responsive-table td:nth-child(1):before, table.responsive-table td:nth-child(2):before
    {        
        font-size: 14px;    
    }    
    #audit-trail-wrapper .header .subcaption span
    {        
        display: block;        
        white-space: -moz-pre-wrap !important;  
        /* Mozilla, since 1999 */        
        white-space: -webkit-pre-wrap; 
        /*Chrome & Safari */        
        white-space: -pre-wrap;      
        /* Opera 4-6 */        
        white-space: -o-pre-wrap;    
        /* Opera 7 */        
        white-space: pre-wrap;       
        /* css-3 */        
        word-wrap: break-word;       
        /* Internet Explorer 5.5+ */        
        word-break: break-all;        
        white-space: normal;    
    }    
    #audit-trail-wrapper .main .history table tr td:first-child, #audit-trail-wrapper .main .history table th:first-child 
    {        
        padding-right: 95px !important;        
        font-size: 12px;    
    }
}

@media only screen and (max-width: 340px) 
{    
    table.responsive-table td:nth-child(1):before, table.responsive-table td:nth-child(2):before 
    {        
        font-size: 14px;    
    }
}

@media print 
{    
    #audit-trail-wrapper a[href]:after 
    {        content: "";    
    }
}


.checkbox input[type=checkbox], .checkbox-inline input[type=checkbox], .radio input[type=radio], .radio-inline input[type=radio] {
    margin-right: -20px;
    margin-top: 0.5%;
}


.checkbox input[type=radio] {
    margin-left: 7px;
    margin-top: 3px;
}

.checkbox-inline, .radio-inline {
    padding-left: 30px;
   
}

.history {
    padding-top: 8%;
}

